--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
     font-size: 50px;
     display: table-cell;
     vertical-align: middle;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .pointer {
