--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@
     display: table-cell;
     vertical-align: middle;
     font-family: 'Courier New', Courier, monospace;
+    cursor: pointer;
 }
 
 .pointer {
@@ -67,6 +68,13 @@
     align-items: center;
 }
 
+.calculatorwithouttable {
+    background-color: #4C4C4C;
+    width: 500px;
+    height: 700px;;
+    border-radius: 10px;
+}
+
 .div {
     display: flex;
     justify-content: center;
@@ -75,19 +83,36 @@
 .screen {
     width: 450px;
     height: 100px;
-    border: 1px solid red;
+    border: 1px solid ;
     border-radius: 10px;
+    margin-top: 10px;
+    font-size: 50px;
+    text-align: end;
 }
 
 .button {
     width: 106px;
     height: 106px;
-    border: 1px solid red;
+    border: 1px solid ;
     border-radius: 10px;
     margin: 5px;
+    cursor: pointer;
+    font-size: 40px;
 
 }
 
 .double {
-    width: 227px;
+    width: 220px;
+}
+
+.code {
+    background-color: #6BC3D1;
+}
+
+.value {
+    background-color: #808080;
+}
+
+.type {
+    background-color: red;
 }
