--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.calculatorwithbutton {
+.calculatorbody {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -6,24 +6,24 @@
     height: 100vh;
 }
 
-.calculatorwithouttable {
+.calculator {
     background-color: #D7D7D7;
-    width: 500px;
-    height: 700px;;
     border-radius: 10px;
 }
 
 .div {
     display: flex;
     justify-content: center;
+    padding: 0px 20px;
 }
 
 .screen {
-    width: 450px;
-    height: 100px;
-    border: 1px solid ;
+    width: 480px;
+    height: 120px;
+    border: 1px solid #aaa;
+    border-bottom: 5px solid #aaa;
     border-radius: 10px;
-    margin-top: 10px;
+    margin-bottom: 20px;
     font-size: 50px;
     text-align: end;
 }
@@ -31,18 +31,19 @@
 .button {
     width: 106px;
     height: 106px;
-    border: 1px solid #aaa ;
-    border-bottom: 5px solid #aaa ;
+    border: 1px solid #aaa;
+    border-bottom: 5px solid #aaa;
     border-radius: 10px;
-    margin: 5px;
+    margin: 10px;
     cursor: pointer;
     font-size: 40px;
 
 }
 
-.double {
-    width: 220px;
+.equal {
+    width: 230px;
     background-color: #2ECC71;
+    border-color: #27ae60;
 }
 
 .code {
@@ -53,7 +54,7 @@
     background-color: #EAEAEA;
 }
 
-.type {
+.text {
     background-color: #e74c3c;
     border-bottom: 5px solid #c0392b;
     color: white;
