--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 }
 
 .screen {
-    width: 480px;
+    width: 462px;
     height: 50px;
     border: 1px solid #aaa;
     /* border-bottom: 5px solid #aaa; */
@@ -27,11 +27,12 @@
     font-size: 20px;
     text-align: end;
     background-color: white;
+    padding-right: 20px;
 }
 
 .output {
-    width: 484px;
-    height: 80px;
+    width: 464px;
+    height: 70px;
     border: 1px solid #aaa;
     border-bottom: 5px solid #aaa;
     border-radius: 0px 0px 10px 10px;
@@ -39,6 +40,7 @@
     font-size: 50px;
     text-align: end;
     background-color: white;
+    padding-right: 20px;
 }
 
 .button {
