update function btnSymbol, btnPoint

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
     margin-top: 20px;
     font-size: 20px;
     text-align: end;
-    background-color: white;
+    background-color: #C5D5BB;
     padding-right: 20px;
 }
 
@@ -39,7 +39,7 @@
     margin-bottom: 20px;
     font-size: 50px;
     text-align: end;
-    background-color: white;
+    background-color: #C5D5BB;
     padding-right: 20px;
 }
 
