--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: FontSaya;
+    src: url(digital-7.ttf);
+}
+
+@font-face {
+    font-family: FontButton;
+    src: url();
+}
+
 .calculatorbody {
     display: flex;
     flex-direction: row;
@@ -28,6 +38,7 @@
     text-align: end;
     background-color: #C5D5BB;
     padding-right: 20px;
+    font-family: "FontSaya";
 }
 
 .output {
@@ -40,7 +51,9 @@
     font-size: 50px;
     text-align: end;
     background-color: #C5D5BB;
+    padding-top: 20px;
     padding-right: 20px;
+    font-family: "FontSaya";
 }
 
 .button {
@@ -52,6 +65,12 @@
     margin: 10px;
     cursor: pointer;
     font-size: 40px;
+    font-family: "Fredoka", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    font-variation-settings:
+    "wdth" 100;
 }
 
 .equal {
